--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -19,6 +19,7 @@
     "@openmrs/esm-patient-clinical-view-app": "next",
     "@openmrs/esm-patient-conditions-app": "next",
     "@openmrs/esm-patient-forms-app": "next",
+    "@openmrs/esm-form-entry-app": "next",
     "@openmrs/esm-patient-immunizations-app": "next",
     "@openmrs/esm-patient-medications-app": "next",
     "@openmrs/esm-patient-notes-app": "next",
