--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,29 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <configuration>
+                            <target>
+                                <mkdir dir="./target/lib"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.12.0</version>
                 <configuration>
                     <installDirectory>target</installDirectory>
                 </configuration>
-
                 <executions>
                     <execution>
                         <id>install node and npm</id>
@@ -83,8 +99,7 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <nodeVersion>v16.2.0</nodeVersion>
-
+                            <nodeVersion>v18.13.0</nodeVersion>
                         </configuration>
                     </execution>
                     <execution>
@@ -93,7 +108,7 @@
                             <goal>npx</goal>
                         </goals>
                         <configuration>
-                            <arguments>openmrs@latest build --build-config spa-build-config.json --target target/dist</arguments>
+                            <arguments>openmrs@next build --build-config spa-build-config.json --target target/dist</arguments>
                         </configuration>
                     </execution>
                     <execution>
@@ -102,7 +117,7 @@
                             <goal>npx</goal>
                         </goals>
                         <configuration>
-                            <arguments>openmrs@latest assemble --mode config --config spa-build-config.json --target target/dist</arguments>
+                            <arguments>openmrs@next assemble --mode config --config spa-build-config.json --target target/dist</arguments>
                         </configuration>
                     </execution>
                 </executions>
