UHM-7959 - Add bed management esm

--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -34,7 +34,8 @@
     "@openmrs/esm-fast-data-entry-app": "next",
     "@openmrs/esm-cohort-builder-app": "next",
     "@openmrs/esm-form-builder-app": "next",
-    "@openmrs/esm-ward-app": "next"
+    "@openmrs/esm-ward-app": "next",
+    "@openmrs/esm-bed-management-app": "next"
   },
   "configUrls":[
     "site/base-config.json",
