--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -1,46 +1,46 @@
 {
   "frontendModules":{
-    "@pih/esm-commons-app":"next",
+    "@pih/esm-commons-app": "2.1.1-pre.54",
 
-    "@openmrs/esm-active-visits-app": "next",
-    "@openmrs/esm-appointments-app": "next",
-    "@openmrs/esm-bed-management-app": "next",
-    "@openmrs/esm-cohort-builder-app": "next",
-    "@openmrs/esm-devtools-app": "next",
-    "@openmrs/esm-dispensing-app": "next",
-    "@openmrs/esm-fast-data-entry-app": "next",
-    "@openmrs/esm-form-builder-app": "next",
-    "@openmrs/esm-form-engine-app": "next",
-    "@openmrs/esm-generic-patient-widgets-app": "next",
-    "@openmrs/esm-help-menu-app": "next",
-    "@openmrs/esm-home-app": "next",
-    "@openmrs/esm-implementer-tools-app": "next",
-    "@openmrs/esm-laboratory-app": "next",
-    "@openmrs/esm-login-app": "next",
-    "@openmrs/esm-openconceptlab-app": "next",
-    "@openmrs/esm-patient-allergies-app": "next",
-    "@openmrs/esm-patient-attachments-app": "next",
-    "@openmrs/esm-patient-banner-app": "next",
-    "@openmrs/esm-patient-chart-app": "next",
-    "@openmrs/esm-patient-conditions-app": "next",
-    "@openmrs/esm-patient-flags-app": "next",
-    "@openmrs/esm-patient-forms-app": "next",
-    "@openmrs/esm-patient-immunizations-app": "next",
-    "@openmrs/esm-patient-list-management-app": "next",
-    "@openmrs/esm-patient-lists-app": "next",
-    "@openmrs/esm-patient-medications-app": "next",
-    "@openmrs/esm-patient-notes-app": "next",
-    "@openmrs/esm-patient-orders-app": "next",
-    "@openmrs/esm-patient-programs-app": "next",
-    "@openmrs/esm-patient-registration-app": "next",
-    "@openmrs/esm-patient-search-app": "next",
-    "@openmrs/esm-patient-tests-app": "next",
-    "@openmrs/esm-patient-vitals-app": "next",
-    "@openmrs/esm-primary-navigation-app": "next",
-    "@openmrs/esm-service-queues-app": "next",
-    "@openmrs/esm-system-admin-app": "next",
-    "@openmrs/esm-user-onboarding-app": "next",
-    "@openmrs/esm-ward-app": "next"
+    "@openmrs/esm-active-visits-app": "9.2.1-pre.6731",
+    "@openmrs/esm-appointments-app": "9.2.1-pre.6731",
+    "@openmrs/esm-bed-management-app": "9.2.1-pre.6731",
+    "@openmrs/esm-cohort-builder-app": "4.0.5-pre.737",
+    "@openmrs/esm-devtools-app": "8.0.1-pre.3360",
+    "@openmrs/esm-dispensing-app": "1.9.2-pre.930",
+    "@openmrs/esm-fast-data-entry-app": "1.4.1-pre.393",
+    "@openmrs/esm-form-builder-app": "3.3.2-pre.2791",
+    "@openmrs/esm-form-engine-app": "11.3.1-pre.8950",
+    "@openmrs/esm-generic-patient-widgets-app": "11.3.1-pre.8950",
+    "@openmrs/esm-help-menu-app": "8.0.1-pre.3360",
+    "@openmrs/esm-home-app": "9.2.1-pre.6731",
+    "@openmrs/esm-implementer-tools-app": "8.0.1-pre.3360",
+    "@openmrs/esm-laboratory-app": "1.2.1-pre.804",
+    "@openmrs/esm-login-app": "8.0.1-pre.3360",
+    "@openmrs/esm-openconceptlab-app": "4.2.2-pre.331",
+    "@openmrs/esm-patient-allergies-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-attachments-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-banner-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-chart-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-conditions-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-flags-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-forms-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-immunizations-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-list-management-app": "9.2.1-pre.6731",
+    "@openmrs/esm-patient-lists-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-medications-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-notes-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-orders-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-programs-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-registration-app": "9.2.1-pre.6731",
+    "@openmrs/esm-patient-search-app": "9.2.1-pre.6731",
+    "@openmrs/esm-patient-tests-app": "11.3.1-pre.8950",
+    "@openmrs/esm-patient-vitals-app": "11.3.1-pre.8950",
+    "@openmrs/esm-primary-navigation-app": "8.0.1-pre.3360",
+    "@openmrs/esm-service-queues-app": "9.2.1-pre.6731",
+    "@openmrs/esm-system-admin-app": "4.2.2-pre.331",
+    "@openmrs/esm-user-onboarding-app": "4.0.1-pre.184",
+    "@openmrs/esm-ward-app": "9.2.1-pre.6731"
   },
   "configUrls":[
     "site/base-config.json",
