--- a/spa-build-config.json
+++ b/spa-build-config.json
@@ -1,47 +1,47 @@
 {
   "frontendModules":{
-    "@pih/esm-commons-app": "2.1.1-pre.86",
-    "@pih/esm-referrals-queue-app": "2.1.1-pre.83",
+    "@pih/esm-commons-app":"next",
+    "@pih/esm-referrals-queue-app":"next",
 
-    "@openmrs/esm-active-visits-app": "9.2.1-pre.7466",
-    "@openmrs/esm-appointments-app": "9.2.1-pre.7466",
-    "@openmrs/esm-bed-management-app": "9.2.1-pre.7466",
-    "@openmrs/esm-cohort-builder-app": "4.0.5-pre.1065",
-    "@openmrs/esm-devtools-app": "8.0.1-pre.3675",
-    "@openmrs/esm-dispensing-app": "1.9.2-pre.1427",
-    "@openmrs/esm-fast-data-entry-app": "1.4.1-pre.503",
-    "@openmrs/esm-form-builder-app": "3.3.2-pre.3106",
-    "@openmrs/esm-form-engine-app": "11.3.1-pre.9686",
-    "@openmrs/esm-generic-patient-widgets-app": "11.3.1-pre.9686",
-    "@openmrs/esm-help-menu-app": "8.0.1-pre.3675",
-    "@openmrs/esm-home-app": "9.2.1-pre.7466",
-    "@openmrs/esm-implementer-tools-app": "8.0.1-pre.3675",
-    "@openmrs/esm-laboratory-app": "1.2.1-pre.1173",
-    "@openmrs/esm-login-app": "8.0.1-pre.3675",
-    "@openmrs/esm-openconceptlab-app": "4.2.2-pre.414",
-    "@openmrs/esm-patient-allergies-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-attachments-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-banner-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-chart-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-conditions-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-flags-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-forms-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-immunizations-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-list-management-app": "9.2.1-pre.7466",
-    "@openmrs/esm-patient-lists-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-medications-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-notes-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-orders-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-programs-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-registration-app": "9.2.1-pre.7466",
-    "@openmrs/esm-patient-search-app": "9.2.1-pre.7466",
-    "@openmrs/esm-patient-tests-app": "11.3.1-pre.9686",
-    "@openmrs/esm-patient-vitals-app": "11.3.1-pre.9686",
-    "@openmrs/esm-primary-navigation-app": "8.0.1-pre.3675",
-    "@openmrs/esm-service-queues-app": "9.2.1-pre.7466",
-    "@openmrs/esm-system-admin-app": "4.2.2-pre.414",
-    "@openmrs/esm-user-onboarding-app": "4.0.1-pre.306",
-    "@openmrs/esm-ward-app": "9.2.1-pre.7511"
+    "@openmrs/esm-active-visits-app": "next",
+    "@openmrs/esm-appointments-app": "next",
+    "@openmrs/esm-bed-management-app": "next",
+    "@openmrs/esm-cohort-builder-app": "next",
+    "@openmrs/esm-devtools-app": "next",
+    "@openmrs/esm-dispensing-app": "next",
+    "@openmrs/esm-fast-data-entry-app": "next",
+    "@openmrs/esm-form-builder-app": "next",
+    "@openmrs/esm-form-engine-app": "next",
+    "@openmrs/esm-generic-patient-widgets-app": "next",
+    "@openmrs/esm-help-menu-app": "next",
+    "@openmrs/esm-home-app": "next",
+    "@openmrs/esm-implementer-tools-app": "next",
+    "@openmrs/esm-laboratory-app": "next",
+    "@openmrs/esm-login-app": "next",
+    "@openmrs/esm-openconceptlab-app": "next",
+    "@openmrs/esm-patient-allergies-app": "next",
+    "@openmrs/esm-patient-attachments-app": "next",
+    "@openmrs/esm-patient-banner-app": "next",
+    "@openmrs/esm-patient-chart-app": "next",
+    "@openmrs/esm-patient-conditions-app": "next",
+    "@openmrs/esm-patient-flags-app": "next",
+    "@openmrs/esm-patient-forms-app": "next",
+    "@openmrs/esm-patient-immunizations-app": "next",
+    "@openmrs/esm-patient-list-management-app": "next",
+    "@openmrs/esm-patient-lists-app": "next",
+    "@openmrs/esm-patient-medications-app": "next",
+    "@openmrs/esm-patient-notes-app": "next",
+    "@openmrs/esm-patient-orders-app": "next",
+    "@openmrs/esm-patient-programs-app": "next",
+    "@openmrs/esm-patient-registration-app": "next",
+    "@openmrs/esm-patient-search-app": "next",
+    "@openmrs/esm-patient-tests-app": "next",
+    "@openmrs/esm-patient-vitals-app": "next",
+    "@openmrs/esm-primary-navigation-app": "next",
+    "@openmrs/esm-service-queues-app": "next",
+    "@openmrs/esm-system-admin-app": "next",
+    "@openmrs/esm-user-onboarding-app": "next",
+    "@openmrs/esm-ward-app": "next"
   },
   "configUrls":[
     "site/base-config.json",
